force-app/main/default/objects/Opportunity/fields/Adjudicatario__c.field-meta.xml
<CustomField>
    <fullName>Adjudicatario__c</fullName>
    <label>Adjudicatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>