force-app/main/default/objects/Opportunity/fields/AETIC__c.field-meta.xml
<CustomField>
    <fullName>AETIC__c</fullName>
    <label>AETIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>