force-app/main/default/objects/Opportunity/fields/Analisis_penalizaciones_excluyentes__c.field-meta.xml
<CustomField>
    <fullName>Analisis_penalizaciones_excluyentes__c</fullName>
    <inlineHelpText>RO</inlineHelpText>
    <label>Análisis penalizaciones excluyentes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Muy exigentes</fullName>
            </value>
            <value>
                <fullName>Moderadas</fullName>
            </value>
            <value>
                <fullName>Bajas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>