force-app/main/default/objects/Opportunity/fields/Aprobacion_Borrador_Acuerdo_de_Socios__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Borrador_Acuerdo_de_Socios__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Una vez subido el Borrador Acuerdo de Socios seleccione este campo para mandarlo a aprobación</inlineHelpText>
    <label>Enviar aprobación Borrador Acuerdo Socio</label>
    <type>Checkbox</type>
</CustomField>