force-app/main/default/objects/Opportunity/fields/Aprobacion_Conjunta__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Conjunta__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Al marcar esta casilla se manda a aprobación la Oportunidad Matriz y Extensiones de desglose</inlineHelpText>
    <label>Aprobación Conjunta</label>
    <type>Checkbox</type>
</CustomField>