force-app/main/default/objects/Opportunity/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATC</fullName>
                <default>true</default>
                <label>ATC</label>
            </value>
            <value>
                <fullName>ATD</fullName>
            </value>
            <value>
                <fullName>INGENIERIA_CIVIL</fullName>
                <label>INGENIERÍA CIVIL Y ARQUITECTURA</label>
            </value>
            <value>
                <fullName>INGENIERIA_INDUSTRIAL</fullName>
                <label>INGENIERÍA INDUSTRIAL</label>
            </value>
            <value>
                <fullName>M2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>