force-app/main/default/objects/Opportunity/fields/Area_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Area_de_negocio__c</fullName>
    <label>Área de negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>