force-app/main/default/objects/Opportunity/fields/AreaReadOnly__c.field-meta.xml
<CustomField>
    <fullName>AreaReadOnly__c</fullName>
    <formula>TEXT(Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Área de la anterior organización (31/12/2021)</inlineHelpText>
    <label>Área</label>
    <type>Text</type>
</CustomField>