force-app/main/default/objects/Opportunity/fields/Bloqueada__c.field-meta.xml
<CustomField>
    <fullName>Bloqueada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueada</label>
    <type>Checkbox</type>
</CustomField>