force-app/main/default/objects/Opportunity/fields/Bookings_breakdown__c.field-meta.xml
<CustomField>
    <fullName>Bookings_breakdown__c</fullName>
    <label>Diversification breakdown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>New Names</fullName>
            </value>
            <value>
                <fullName>Cross-selling</fullName>
            </value>
            <value>
                <fullName>Up-selling</fullName>
                <label>Growth being incumbent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>