force-app/main/default/objects/Opportunity/fields/BU_Manager__c.field-meta.xml
<CustomField>
    <fullName>BU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BU_Manager_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>