force-app/main/default/objects/Opportunity/fields/BusinessDeveloper__c.field-meta.xml
<CustomField>
    <fullName>BusinessDeveloper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BusinessDeveloper_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>