force-app/main/default/objects/Opportunity/fields/Campanya__c.field-meta.xml
<CustomField>
    <fullName>Campanya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>