force-app/main/default/objects/Opportunity/fields/Certificaciones_perfiles__c.field-meta.xml
<CustomField>
    <fullName>Certificaciones_perfiles__c</fullName>
    <inlineHelpText>RO</inlineHelpText>
    <label>Certificaciones perfiles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>