force-app/main/default/objects/Opportunity/fields/Clase_de_oferta__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_oferta__c</fullName>
    <label>Clase de oferta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
            <value>
                <fullName>Acuerdo Marco</fullName>
                <isActive>false</isActive>
                <label>Acuerdo Marco / SDA</label>
            </value>
            <value>
                <fullName>Acuerdo Marco Privado</fullName>
                <label>Acuerdo Marco / SDA Privado</label>
            </value>
            <value>
                <fullName>Acuerdo Marco Público</fullName>
                <label>Acuerdo Marco / SDA Público</label>
            </value>
            <value>
                <fullName>Ampliación de Contrato</fullName>
                <isActive>false</isActive>
                <label>Ampliación de Contrato</label>
            </value>
            <value>
                <fullName>Información Previa</fullName>
                <isActive>false</isActive>
                <label>Información Previa</label>
            </value>
            <value>
                <fullName>Invitación Acuerdo Marco</fullName>
                <isActive>false</isActive>
                <label>Invitación Acuerdo Marco / SDA</label>
            </value>
            <value>
                <fullName>Invitación Pública</fullName>
                <isActive>false</isActive>
                <label>Invitación Pública</label>
            </value>
            <value>
                <fullName>Licitación Pública</fullName>
                <isActive>false</isActive>
                <label>Licitación Pública</label>
            </value>
            <value>
                <fullName>Oferta interco</fullName>
                <isActive>false</isActive>
                <label>Oferta interco</label>
            </value>
            <value>
                <fullName>Petición EOI / Pre-Calificación</fullName>
                <isActive>false</isActive>
                <label>Petición EOI / Pre-Calificación</label>
            </value>
            <value>
                <fullName>Privada</fullName>
            </value>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Registro Proveedores</fullName>
                <isActive>false</isActive>
                <label>Registro Proveedores</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>