force-app/main/default/objects/Opportunity/fields/Clasificacion_funcional_Nivel_1__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_funcional_Nivel_1__c</fullName>
    <label>Clasificación funcional - Nivel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>