force-app/main/default/objects/Opportunity/fields/CMO__c.field-meta.xml
<CustomField>
    <fullName>CMO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades7_del_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>