force-app/main/default/objects/Opportunity/fields/Codigo_AJI__c.field-meta.xml
<CustomField>
    <fullName>Codigo_AJI__c</fullName>
    <inlineHelpText>Ayesa ON &gt; Apps Center &gt; Sección Working Tools &gt; Encargos AJI</inlineHelpText>
    <label>Código AJI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>