force-app/main/default/objects/Opportunity/fields/Codigo_Estado_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Estado_de_Cierre__c</fullName>
    <description>Codigo estado de cierre para procesos Ibermatica (G,P,A)</description>
    <formula>IF (ispickval(StageName,&apos;Cerrada&apos;) &amp;&amp; NOT(ISBLANK(TEXT(Estado_de_Cierre__c))),
				CASE(Estado_de_Cierre__c,
									&apos;Contratada&apos;, &apos;G&apos;,
									&apos;Perdida&apos;, &apos;P&apos;,
									&apos;Anulada&apos;, &apos;P&apos;,
									&apos;No Presentada&apos;, &apos;P&apos;,
									&apos;A&apos;), CASE(Subfase__c,
																				&apos;Ganada&apos;, &apos;G&apos;,
																				&apos;Perdida&apos;, &apos;P&apos;,
																				&apos;Aplazada / anulada&apos;, &apos;P&apos;,
																				&apos;No presentada&apos;, &apos;P&apos;,
																				&apos;A&apos;)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Estado de Cierre</label>
    <type>Text</type>
</CustomField>