force-app/main/default/objects/Opportunity/fields/Codigo_OC__c.field-meta.xml
<CustomField>
    <fullName>Codigo_OC__c</fullName>
    <displayFormat>OS{YY}-{0000}</displayFormat>
    <label>Código Oportunidad Comercial</label>
    <type>AutoNumber</type>
</CustomField>