force-app/main/default/objects/Opportunity/fields/Competencia_esperada__c.field-meta.xml
<CustomField>
    <fullName>Competencia_esperada__c</fullName>
    <description>Campo de texto para guardar info acerca de la competencia esperada.</description>
    <label>Competencia esperada</label>
    <type>TextArea</type>
</CustomField>