force-app/main/default/objects/Opportunity/fields/Comprobaci_n_MARGEN__c.field-meta.xml
<CustomField>
    <fullName>Comprobaci_n_MARGEN__c</fullName>
    <formula>Importe_total_sin_IVA__c  *  RENTPPTO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comprobación MARGEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>