force-app/main/default/objects/Opportunity/fields/Consideraciones_especiales__c.field-meta.xml
<CustomField>
    <fullName>Consideraciones_especiales__c</fullName>
    <label>Consideraciones especiales</label>
    <length>100</length>
    <type>Text</type>
</CustomField>