force-app/main/default/objects/Opportunity/fields/Contacto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Principal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto Principal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El contacto no está relacionado con la cuenta elegida</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Cliente__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>