force-app/main/default/objects/Opportunity/fields/Correo_Oferta_enviado__c.field-meta.xml
<CustomField>
    <fullName>Correo_Oferta_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Correo Oferta enviado?</label>
    <type>Checkbox</type>
</CustomField>