force-app/main/default/objects/Opportunity/fields/CR_HW_Super__c.field-meta.xml
<CustomField>
    <fullName>CR_HW_Super__c</fullName>
    <label>CR HW Super</label>
    <length>255</length>
    <type>Text</type>
</CustomField>