force-app/main/default/objects/Opportunity/fields/Cross_Selling__c.field-meta.xml
<CustomField>
    <fullName>Cross_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica si la Oportunidad nace de las sinergias con Ibermática.</inlineHelpText>
    <label>Checkbox Sinergias</label>
    <type>Checkbox</type>
</CustomField>