force-app/main/default/objects/Opportunity/fields/Cuenta_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Principal__c</fullName>
    <formula>IF( ISBLANK(  Cliente__r.ParentId  ),   Cliente__r.Name  ,  Cliente__r.Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Principal</label>
    <type>Text</type>
</CustomField>