force-app/main/default/objects/Opportunity/fields/Decision_Go_Smart_BPM_Offer__c.field-meta.xml
<CustomField>
    <fullName>Decision_Go_Smart_BPM_Offer__c</fullName>
    <label>Decisión Go Preliminar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>