force-app/main/default/objects/Opportunity/fields/Descontratacion__c.field-meta.xml
<CustomField>
    <fullName>Descontratacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Al crear una extensión de ajuste con importe negativo se marca el check</description>
    <label>Descontratación</label>
    <type>Checkbox</type>
</CustomField>