force-app/main/default/objects/Opportunity/fields/Director_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Director_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Compliance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades2_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>