force-app/main/default/objects/Opportunity/fields/Director_Division__c.field-meta.xml
<CustomField>
    <fullName>Director_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director de División</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesRSAo_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>