force-app/main/default/objects/Opportunity/fields/Director_Global_de_QA_Risk__c.field-meta.xml
<CustomField>
    <fullName>Director_Global_de_QA_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Global de QA &amp; Risk</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades3_del_Aux</relationshipName>
    <type>Lookup</type>
</CustomField>